# circle-inversion

./: conformal-ray-cartoon.js  gfx.js  glsl_generator.py  index.html  index.js  inside-out-bunny.js  package.json  pyproject.toml  tangle-text.js
alglbraic-cga/: cli.py
cga2/: CGA2.glsl  index.glsl
gl/: circle_center_frag.glsl  circle_center_vert.glsl  circle_center_vert_src.glsl  common.glsl  frag.glsl  frag_src.glsl  lib.glsl  rotate2.glsl  rotate3.glsl  rotate4.glsl  vert.glsl  vert_out.glsl  vert_src.glsl
gl/cga2/: CGA2.glsl  index.glsl  inject2.glsl  injectOneBlade.glsl
gl/cga3/: CGA3.glsl
mathematics/: __init__.py  cli.py
