[tool.poetry]
name = "conformal-raytracer"
version = "0.1.0"
description = ""
authors = ["Micah Fitch <micahscopes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
alglbraic = {path = "../alglbraic/"}

[tool.poetry.dev-dependencies]
ipython = "^7.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
